--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,48 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ site.name }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{{ site.description }}">
-
-
-
-<code class="nt">&lt;link</code> <code class="na">href=</code><code class="s">&quot;/css/bootstrap.css&quot;</code> <code class="na">rel=</code><code class="s">&quot;stylesheet&quot;</code><code class="nt">&gt;</code>
-<code class="nt">&lt;style&gt;</code>
-  <code class="nt">body</code> <code class="p">{</code>
-    <code class="k">padding-top</code><code class="o">:</code> <code class="m">60px</code><code class="p">;</code>
-  <code class="p">}</code>
-<code class="nt">&lt;/style&gt;</code>
-<code class="nt">&lt;link</code> <code class="na">href=</code><code class="s">&quot;/css/bootstrap-responsive.css&quot;</code> <code class="na">rel=</code><code class="s">&quot;stylesheet&quot;</code><code class="nt">&gt;</code>
-
-<code class="c">&lt;!-- HTML5 shim, for IE6-8 support of HTML5 elements --&gt;</code>
-<code class="c">&lt;!--[if lt IE 9]&gt;</code>
-
-
-
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></sc\ ript> <![endif]--> </head>
-
+<html>
+<head>
+    <title>Blogging With Jekyll and Github</title>
+</head>
 
 <body>
+    <h1>Blogging With Jekyll and Github</h1>
 
-
-<code class="nt">&lt;div</code> <code class="na">class=</code><code class="s">&quot;navbar navbar-inverse navbar-fixed-top&quot;</code><code class="nt">&gt;</code>
-  <code class="nt">&lt;div</code> <code class="na">class=</code><code class="s">&quot;navbar-inner&quot;</code><code class="nt">&gt;</code>
-    <code class="nt">&lt;div</code> <code class="na">class=</code><code class="s">&quot;container&quot;</code><code class="nt">&gt;</code>
-      <code class="nt">&lt;a</code> <code class="na">class=</code><code class="s">&quot;btn btn-navbar&quot;</code> <code class="na">data-toggle=</code><code class="s">&quot;collapse&quot;</code> <code class="na">data-target=</code><code class="s">&quot;.na\</code>
-
-
-
-v-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </a> <a class="brand" href="#">{{ site.name }}</a> <div class="nav-collapse collapse"> <ul class="nav"> <li class="active"><a href="/">Home</a></li> </ul> </div> </div> </div> </div>
-
-
-<code class="nt">&lt;div</code> <code class="na">class=</code><code class="s">&quot;container&quot;</code><code class="nt">&gt;</code>
-
-  {{ content }}
-
-<code class="nt">&lt;/div&gt;</code>
-
-
-
-</body> </html> 
+</body>
+</html>
