added some content

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>{{ post.title }}</title>
 </head>
 
 <body>
 
-    
+    {{ post }}
 
 </body>
 </html>
