--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,8 +22,8 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-		<h1>{{ content.title }}</h1>
-        <p>{{ content }}</p>
+		<h1>{{ page.title }}</h1>
+        {{ content }}
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
