--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -33,10 +33,15 @@
   </head>
 
   <body>
+  
+  <div class="banner-header">
+  <a href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/bannerbg.png" alt="bitsgalore"  width="602" height="127"></a>
+  </div> 
+  
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
+          <!-- <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a> -->
           <ul class="nav">
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
