--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,8 +35,8 @@
   <body>
   
   <div class="banner-header">
-  <a href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/bannerbg.png" alt="bitsgalore"  width="602" height="127"></a>
-  </div> 
+    <a href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/banner3.png" alt="bitsgalore"  width="619" height="108"></a>
+  </div>
   
     <div class="navbar">
       <div class="navbar-inner">
