--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -6,7 +6,7 @@
 .container-narrow > hr {
   margin: 30px 0; }
 
-.banner-header{margin:10px 0 10px 330px; border-style:none; }
+.banner-header{margin:30px 0 10px 330px; }
 
 p{
   font-family: Georgia, Palatino, serif;
