--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -17,7 +17,16 @@ h1{font-size:28px; line-height:30px;margin:0 0 10px;}
 h2{font-size:20px; line-height:22px; margin:0 0 10px;}
 h3{font-size:18px; line-height:20px; margin:0 0 10px;}
 
-  
+table{
+  font-family: Georgia, Palatino, serif;
+  font-size:14px;line-height:16px;
+  border-collapse:collapse;
+  margin:0 0 20px; }
+
+td, th{
+ padding:15px;
+ border: 1px solid black; }
+ 
 .navbar .nav {
   float: right; }
 
