fixed padding index page

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -8,6 +8,8 @@
 
 .banner-header{margin:30px 0 10px 330px; }
 
+.post-entry{padding-bottom:25px;}
+
 p{
   font-size:16px;line-height:22px;
   margin:0 0 20px; }
