clean-up and removed bolllocks text in sidebar

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,8 +38,10 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span2">
-      </div>
+	    <!-- Column left (empty) -->
+	  </div>
       <div class="span6">
+	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
           <a href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/banner3.png" alt="bitsgalore"  width="619" height="108"></a>
         </div>
@@ -63,34 +65,36 @@
   <div class="container-fluid">
 	<div class="row-fluid">
 	  <div class="span2">
-	      <!--Empty column -->
+	      <!-- Column left (empty) -->
 	  </div>
 	
 	  <div class="span6">
+	    <!-- Column center (main content) -->
         <div class="content">
           {{ content }}
         </div>	
 	  </div>
 	
 	  <div class="span1">
-	    <!--Empty column -->
+	    <!--Another empty column to create some space -->
 	  </div>
 	
 	  <div class="span2"> 
+	    <!-- Column right (Twitter button, might add menu or any other random crazy shit later) -->
 	    <a href="https://twitter.com/bitsgalore" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @bitsgalore</a>
 	    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-	    <p>Das ist groovy ja, ganz nicht schlecht so. Jetzt geht's mal richtig los!</p>
 	  </div>	
 	</div>
 	
 	<footer>
 	<hr>
 	<div class="row-fluid">
-      <div class="span1">
-	    <!--Empty column -->
+      <div class="span2">
+	    <!-- Column left (empty) -->
 	  </div>
 	  
 	  <div class="span6">
+	  <!-- Column center (footer text) -->
 	    <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
         with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
         and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
