--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -22,8 +22,8 @@ blockquote p{
   margin-bottom:0; font-size:16px; font-style:italic; font-weight:300 ;line-height:22px; }
   
 h1{font-size:28px; line-height:30px;margin: 0 0 0 0;}
-h2{font-size:20px; line-height:22px; margin:20px 0 0 0;}
-h3{font-size:18px; line-height:20px; margin:20px 0 0 0;}
+h2{font-size:20px; line-height:22px; margin:20px 0 10px 0;}
+h3{font-size:18px; line-height:20px; margin:20px 0 10px 0;}
 
 table{
   font-size:14px;line-height:16px;
