--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -14,6 +14,17 @@
 
 .post-entry{padding-bottom:25px;}
 
+.banner-tagline{
+  font-size:26px;
+  font-style:bold;
+  letter-spacing:10px;
+  line-height:30px;
+  text-align:center;
+  color:#708090;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  }
+
 p{
   font-size:16px;line-height:22px;
   /*margin:0 0 20px;*/ }
