grey background banner

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -35,12 +35,13 @@
   <body>
     
   <!-- Place banner image aligned with column layout --> 
+  <div class="top-area">
   <div class="container-fluid">
     <div class="row-fluid">
       <div class="span2">
 	    <!-- Column left (empty) -->
 	  </div>
-      <div class="span6">
+      <div class="span8">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
           <!-- <a href="{{ HOME_PATH }}"><img src="]({{ site.url }}/images/banner3.png" alt="bitsgalore"  width="619" height="108"></a> -->
@@ -49,6 +50,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
   
   <div class="navbar">
