--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -6,11 +6,14 @@
   
 .container-narrow > hr {
   margin: 30px 0; }
-  
+
+.top-area{background-color: #f0f0f0 ;
+}
+
 .banner-header{
    margin-top: 30px;
    margin-bottom: 10px;
-   width: auto}
+  }
 
 .post-entry{padding-bottom:25px;}
 
@@ -19,7 +22,7 @@
   font-style:bold;
   letter-spacing:10px;
   line-height:30px;
-  text-align:center;
+  text-align:left;
   color:#708090;
   margin-top: 0px;
   margin-bottom: 0px;
