--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -7,7 +7,9 @@
 .container-narrow > hr {
   margin: 30px 0; }
 
-.top-area{background-color: #f0f0f0 ;
+.top-area{
+  background-color: #f0f0f0 ;
+  margin-bottom: 20px;
 }
 
 .banner-header{
@@ -28,6 +30,31 @@
   margin-bottom: 0px;
   }
 
+.sidebar{
+  background-color: #f0f0f0;
+  margin-top: 15px;
+  padding: 15px;
+;
+  }
+  
+.sidebar h1{
+  letter-spacing:3px;
+  font-size:24px;
+  color:#708090;
+  }
+
+.sidebar h2{
+  font-size:20px;
+  }
+
+.sidebar h3{
+  font-size:18px;
+  }  
+
+.sidebar p{
+  font-size:14px;
+  }  
+  
 p{
   font-size:16px;line-height:22px;
   /*margin:0 0 20px;*/ }
@@ -35,9 +62,9 @@ p{
 blockquote p{
   margin-bottom:0; font-size:16px; font-style:italic; font-weight:300 ;line-height:22px; }
   
-h1{font-size:28px; line-height:30px;margin: 20px 0 10px 0;}
-h2{font-size:20px; line-height:22px; margin:20px 0 10px 0;}
-h3{font-size:18px; line-height:20px; margin:20px 0 10px 0;}
+h1{font-size:28px; line-height:30px;margin: 10px 0 10px 0;}
+h2{font-size:20px; line-height:22px; margin:10px 0 10px 0;}
+h3{font-size:18px; line-height:20px; margin:10px 0 10px 0;}
 
 table{
   font-size:14px;line-height:16px;
