restyled sidebar, title bar now uses embedded font

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -41,11 +41,11 @@
       <div class="span2">
 	    <!-- Column left (empty) -->
 	  </div>
-      <div class="span8">
+      <div class="span10">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-          <!-- <a href="{{ HOME_PATH }}"><img src="]({{ site.url }}/images/banner3.png" alt="bitsgalore"  width="619" height="108"></a> -->
-		  <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner4.png" alt="bitsgalore"  width="615" height="80"></a>
+		<!-- <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner4.png" alt="bitsgalore"  width="615" height="80"></a> -->
+		  <div class="banner-title"><a href="{{ HOME_PATH }}">bitsgalore</a></div>  
 		  <div class="banner-tagline">assorted &#9642;&#9642; random &#9642;&#9642; stuff</div>
         </div>
       </div>
@@ -73,14 +73,7 @@
 	  <div class="span3"> 
 	    <div class="sidebar">
 	      <!-- Column right -->
-		  <h1><a href="{{ site.url }}/about.html">about</a></h1>
-
-		  <h1>twitter</h1>
-		  <a href="https://twitter.com/bitsgalore" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @bitsgalore</a>
-	      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-
-		  <h1>feeds</h1>
-		  
+	  
 		  <p>
 		  <a href="{{ site.url }}/rss.xml"><img src="{{ site.url }}/images/feed-icon-32px.png" alt="RSS"  width="32" height="32"></a>
 		  <a href="{{ site.url }}/rss.xml">RSS</a>
@@ -88,11 +81,18 @@
 		  <a href="{{ site.url }}/atom.xml"><img src="{{ site.url }}/images/feed-icon-32px.png" alt="ATOM"  width="32" height="32"></a>
 		  <a href="{{ site.url }}/atom.xml">ATOM</a>
 		  </p>
+		  
+		  <p>
+		  <a href="https://twitter.com/bitsgalore" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bitsgalore</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		  </p>
+		  
+		  <h1><a href="{{ site.url }}/about.html">about</a></h1>
+		  
+		  <h1><a href="{{ site.url }}/tags.html">tags</a></h1>
+		  
+		  <h1><a href="{{ site.url }}/archive.html">archive</a></h1>
 
-		  <h1>archive</h1>
-		  {% include JB/setup %}
-          {% assign posts_collate = site.posts %}
-          {% include JB/posts_collate %}
 	    </div>
       </div>	  
 	</div>
@@ -108,7 +108,7 @@
 	  <!-- Column center (footer text) -->
 	    <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
         with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-        and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
+        and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>; ComputerAmok font by <a href="http://www.pizzadude.dk" target="_blank">Jakob Fischer</a></small></p>
       </div>
 	</div>
     </footer>
