--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -12,13 +12,32 @@
   margin-bottom: 20px;
 }
 
+@font-face{ 
+    font-family: "ComputerAmok"; 
+    src: url('fonts/ComputerAmok.eot'); /* For IE */ 
+    src: local('ComputerAmok'), url('fonts/ComputerAmok.ttf') format('truetype'); /* For non-IE */
+	}
+
 .banner-header{
    margin-top: 30px;
    margin-bottom: 10px;
   }
 
-.post-entry{padding-bottom:25px;}
+.banner-title{
+    font-family: "ComputerAmok";
+    font-size: 70pt;
+	color:#aa0000;
+	padding-top:20px;
+	padding-bottom:40px;
+  }
 
+.banner-title a:link {color:#aa0000;}      /* unvisited link */
+.banner-title a:visited {color:#aa0000;}  /* visited link */
+.banner-title a:hover {color:#aa0000;
+  text-decoration:none;}  /* mouse over link */
+.banner-title a:active {color:#aa0000;
+  text-decoration:none;}  /* selected link */
+  
 .banner-tagline{
   font-size:26px;
   font-style:bold;
@@ -30,6 +49,8 @@
   margin-bottom: 0px;
   }
 
+.post-entry{padding-bottom:25px;}
+  
 .sidebar{
   background-color: #f0f0f0;
   margin-top: 15px;
@@ -38,11 +59,11 @@
   }
   
 .sidebar h1{
-  letter-spacing:3px;
+  /* letter-spacing:3px; */
   font-size:24px;
-  color:#708090;
+  /* color:#708090; */
   }
-
+  
 .sidebar h2{
   font-size:20px;
   }
