banner now svg image

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -44,8 +44,7 @@
       <div class="span10">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-		<!-- <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner4.png" alt="bitsgalore"  width="615" height="80"></a> -->
-		  <div class="banner-title"><a href="{{ HOME_PATH }}">bitsgalore</a></div>  
+		  <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner.svg" alt="bitsgalore"  width="615" height="80"></a>
 		  <div class="banner-tagline">assorted &#9642;&#9642; random &#9642;&#9642; stuff</div>
         </div>
       </div>
