some more refinements

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -82,15 +82,15 @@
 		  </p>
 		  
 		  <p>
-		  <a href="https://twitter.com/bitsgalore" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @bitsgalore</a>
-          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		  </p>
+		  <a href="https://twitter.com/bitsgalore"><img src="{{ site.url }}/images/Twitter_logo_blue_32.png" alt="Twitter"  width="39" height="32"></a>
+		  <a href="https://twitter.com/bitsgalore">Follow @bitsgalore</a>
+          </p>
 		  
-		  <h1><a href="{{ site.url }}/about.html">about</a></h1>
+		  <h2><a href="{{ site.url }}/about.html">about</a></h2>
 		  
-		  <h1><a href="{{ site.url }}/tags.html">tags</a></h1>
+		  <h2><a href="{{ site.url }}/tags.html">tags</a></h2>
 		  
-		  <h1><a href="{{ site.url }}/archive.html">archive</a></h1>
+		  <h2><a href="{{ site.url }}/archive.html">archive</a></h2>
 
 	    </div>
       </div>	  
