--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -103,7 +103,7 @@
 	  <!-- Column center (footer text) -->
 	    <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
         with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-        and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>; ComputerAmok font by <a href="http://www.pizzadude.dk" target="_blank">Jakob Fischer</a></small></p>
+        and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
       </div>
 	</div>
     </footer>
