replaced banner SVG by PNG (SVG problematic in IE8)

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -44,7 +44,7 @@
       <div class="span10">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-		  <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner.svg" alt="bitsgalore"  width="615" height="80"></a>
+		  <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner.png" alt="bitsgalore"  width="615" height="95"></a>
 		  <div class="banner-tagline">assorted &#9642;&#9642; random &#9642;&#9642; stuff</div>
         </div>
       </div>
