--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -110,7 +110,9 @@
   
 
 body{
-  font-size:16px;
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-size: 20px;
+    color: #454545;
   }
   
 blockquote p{
