--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,16 +38,19 @@
   <div class="top-area">
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span2">
+      <div class="span3">
 	    <!-- Column left (empty) -->
 	  </div>
-      <div class="span10">
+      <div class="span5">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-		  <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/banner.png" alt="bitsgalore"  width="615" height="95"></a>
+		  <a href="{{ HOME_PATH }}"><img class="banner-img" src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="75" height="95"></a>
 		  <div class="banner-tagline">assorted &#9642;&#9642; random &#9642;&#9642; stuff</div>
         </div>
       </div>
+      <div class="span3">
+	    <!-- Column right (empty) -->
+	  </div>
     </div>
   </div>
   </div>
@@ -95,11 +98,11 @@
 	<footer>
 	<hr>
 	<div class="row-fluid">
-      <div class="span2">
+      <div class="span3">
 	    <!-- Column left (empty) -->
 	  </div>
 	  
-	  <div class="span6">
+	  <div class="span5">
 	  <!-- Column center (footer text) -->
 	    <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
         with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
