--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -8,23 +8,36 @@
   margin: 30px 0; }
 
 .top-area{
-  background-color: #f0f0f0 ;
+  background-color: #333333;
   margin-bottom: 20px;
 }
 
 .banner-header{
-   margin-top: 10px;
-   margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   }
-  
+
+.banner-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+} 
+
 .banner-tagline{
   font-size:26px;
   letter-spacing:4px;
   line-height:30px;
-  text-align:left;
-  color:#708090;
+  text-align:center;
+  color:#f2f2f2;
   margin-top: 0px;
   margin-bottom: 0px;
+  }
+
+.footnotes{
+  border-top: 2px solid black;
+  margin-top: 50px;
+  margin-bottom: 10px;
+  padding: 15px;
   }
 
 .pagination{
