Basic layout now works

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,19 +38,14 @@
   <div class="top-area">
   <div class="container-fluid">
     <div class="row-fluid">
-      <div class="span3">
-	    <!-- Column left (empty) -->
-	  </div>
-      <div class="span5">
+      <!-- <div class="span3" /> -->
+      <div class="span11">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-		  <a href="{{ HOME_PATH }}"><img class="banner-img" src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="75" height="95"></a>
-		  <div class="banner-tagline">assorted &#9642;&#9642; random &#9642;&#9642; stuff</div>
+		  <div class="banner-tagline"><a href="{{ HOME_PATH }}">bitsgalore.org</a></div>
         </div>
       </div>
-      <div class="span3">
-	    <!-- Column right (empty) -->
-	  </div>
+      <!-- <div class="span3"/> -->
     </div>
   </div>
   </div>
@@ -58,8 +53,7 @@
   <div class="container-fluid">
 	<div class="row-fluid">
 	  <div class="span3">
-	      <!-- Column left (empty) -->
-	  </div>
+      </div>
 	
 	  <div class="span5">
 	    <!-- Column center (main content) -->
@@ -71,27 +65,17 @@
 	  <div class="span3"> 
 	    <div class="sidebar">
 	      <!-- Column right -->
-	  
-		  <p>
-		  <a href="{{ site.url }}/rss.xml"><img src="{{ site.url }}/images/feed-icon-32px.png" alt="RSS"  width="32" height="32"></a>
-		  <a href="{{ site.url }}/rss.xml">RSS</a>
-		  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		  <a href="{{ site.url }}/atom.xml"><img src="{{ site.url }}/images/feed-icon-32px.png" alt="ATOM"  width="32" height="32"></a>
-		  <a href="{{ site.url }}/atom.xml">ATOM</a>
-		  </p>
+          <!--<a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="75" height="95"></a> -->	  	
 		  
-		  <p>
-		  <a href="https://twitter.com/bitsgalore"><img src="{{ site.url }}/images/Twitter_logo_blue_32.png" alt="Twitter"  width="39" height="32"></a>
-		  <a href="https://twitter.com/bitsgalore">Follow @bitsgalore</a>
-          </p>
+		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
+		  <h2><a href="https://twitter.com/bitsgalore">Follow on Twitter</a></h2>
+		  <!-- <h2><a href="{{ site.url }}/tags.html">tags</a></h2> -->
+		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
+		  <h2><a href="{{ site.url }}/atom.xml">ATOM feed</a></h2>
+          <h2><a href="{{ site.url }}/archive.html">Archive</a></h2>
 		  
-		  <h2><a href="{{ site.url }}/about.html">about</a></h2>
-		  
-		  <h2><a href="{{ site.url }}/tags.html">tags</a></h2>
-		  
-		  <h2><a href="{{ site.url }}/archive.html">archive</a></h2>
-
 	    </div>
+
       </div>	  
 	</div>
 	
