--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,3 +1,6 @@
+---
+---
+
 /* Custom container */
 .container-narrow {
   margin: auto auto auto 150px;
@@ -8,29 +11,31 @@
   margin: 30px 0; }
 
 .top-area{
-  background-color: #333333;
+  /*background-color: #333333; */
+  /*margin-top: 10px;*/
+  margin-left: 0px;
+  margin-right: 0px;
   margin-bottom: 20px;
+  border-bottom: 2px solid black;
 }
 
 .banner-header{
-  margin-top: 10px;
-  margin-bottom: 10px;
+    /*@include box-shadow(rgba(0, 0, 0, 0.30) 0 4px 10px 0);
+    background: url({{ site.url }}/images/bitrotbanner.jpg) no-repeat center center fixed;
+    height: 300px;
+    background-position: center;
+    background-size: cover; */
   }
 
-.banner-img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-} 
-
 .banner-tagline{
-  font-size:26px;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size:40px;
   letter-spacing:4px;
-  line-height:30px;
+  line-height:40px;
   text-align:center;
-  color:#f2f2f2;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  color:#595959;
+  margin-top: 100px;
+  margin-bottom: 50px;
   }
 
 .footnotes{
@@ -64,36 +69,30 @@
   }
   
 .sidebar{
-  background-color: #f0f0f0;
-  margin-top: 0px;
+  font-family: Verdana, Geneva, sans-serif;
+  text-align:left;
+  /*color:#595959;*/
+  margin-top: 20px;
   margin-bottom: 20px;
-  padding: 15px;
+  /*padding-left: 50px;*/
+  border-bottom: 2px solid black;
   }
   
-.sidebar h1{
-  font-size:24px;
-  text-align:left;
-  }
-  
+.sidebar p{
+  font-size:16px;
+  line-height:18px;
+  }  
+
 .sidebar h2{
-  font-size:20px;
-  line-height:26px; 
-  margin:10px 0 20px 0; 
-  /*border-bottom: 2px solid #ccc;*/
-  text-align:left;
-  }
+  font-size:16px;
+  line-height:18px;
+  } 
 
 .sidebar h3{
-  font-size:18px;
-  line-height:24px; 
-  margin:10px 0 20px 0;
-  color:#708090;
-  text-align:left;
-  }  
+  font-size:16px;
+  line-height:18px;
+  } 
 
-.sidebar p{
-  font-size:14px;
-  }  
 
 .sidebar small{
   color:#708090;;
