--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,7 +42,8 @@
       <div class="span11">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-		  <div class="banner-tagline"><a href="{{ HOME_PATH }}">bitsgalore.org</a></div>
+        <a href="/"><img src="{{ site.url }}/images/banner-new.png" alt="bitsgalore" class="img-center" width="818" height="150"></a>
+		  <div class="banner-tagline">digital preservation & file formats</div>
         </div>
       </div>
       <!-- <div class="span3"/> -->
