--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,8 +42,8 @@
       <div class="span11">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-        <a href="/"><img src="{{ site.url }}/images/banner-new.png" alt="bitsgalore" class="img-center" width="818" height="150"></a>
-		  <div class="banner-tagline">digital preservation & file formats</div>
+        <a href="/"><img src="{{ site.url }}/images/banner-new.png" alt="bitsgalore" class="img-center" width="970" height="150"></a>
+		  <div class="banner-tagline">digital preservation - file formats</div>
         </div>
       </div>
       <!-- <div class="span3"/> -->
@@ -66,8 +66,9 @@
 	  <div class="span3"> 
 	    <div class="sidebar">
 	      <!-- Column right -->
-          <!--<a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="75" height="95"></a> -->	  	
-		  
+          <p>
+          <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="159" height="200"></a>	  	
+		  </p>
 		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
 		  <h2><a href="https://twitter.com/bitsgalore">Follow on Twitter</a></h2>
 		  <!-- <h2><a href="{{ site.url }}/tags.html">tags</a></h2> -->
