--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -75,9 +75,19 @@
 		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
 		  <h2><a href="{{ site.url }}/atom.xml">ATOM feed</a></h2>
           <h2><a href="{{ site.url }}/archive.html">Archive</a></h2>
+
 		  
 	    </div>
 
+	    <div class="sidebar">
+	      <!-- Tag cloud -->
+          <h2>Tags</h2>
+          <p>
+          <ul class="tag_box inline">
+            {% assign tags_list = site.tags %}  
+            {% include JB/tags_list %}
+          </ul>
+          </p>
       </div>	  
 	</div>
 	
