--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -81,7 +81,7 @@
 
 	    <div class="sidebar">
 	      <!-- Tag cloud -->
-          <h2>Tags</h2>
+          <h2><a href="{{ site.url }}/tags.html">Tags</a></h2>
           <p>
           <ul class="tag_box inline">
             {% assign tags_list = site.tags %}  
