test: updated link

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -69,7 +69,7 @@
           <p>
           <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="159" height="200"></a>	  	
 		  </p>
-		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
+		  <h2><a href="{{ site.url }}/about/">About</a></h2>
 		  <h2><a href="https://twitter.com/bitsgalore">Follow on Twitter</a></h2>
 		  <!-- <h2><a href="{{ site.url }}/tags.html">tags</a></h2> -->
 		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
