fixed footer placement

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -39,7 +39,7 @@
   <div class="container-fluid">
     <div class="row-fluid">
       <!-- <div class="span3" /> -->
-      <div class="span11">
+      <div class="span12">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
         <a href="/"><img src="{{ site.url }}/images/banner-new.png" alt="bitsgalore" class="img-center" width="970" height="150"></a>
@@ -75,7 +75,6 @@
 		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
 		  <h2><a href="{{ site.url }}/atom.xml">ATOM feed</a></h2>
           <h2><a href="{{ site.url }}/archive.html">Archive</a></h2>
-
 	    </div>
 
 	    <div class="sidebar">
@@ -86,24 +85,30 @@
             {% assign tags_list = site.tags %}  
             {% include JB/tags_list %}
           </ul>
-        </div>	  
+        </div>
+	  </div>
+
+      <div class="span1">
+        <!-- Empty -->
+      </div>
+
 	</div>
 	
-	<footer>
 	<hr>
 	<div class="row-fluid">
 	  
-      <div class="span4"></div>
+      <div class="span3">
+        <!-- Empty -->   
+      </div>
+
 	  <div class="span5">
-	  <!-- Column center (footer text) -->
-	    <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-        with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-        and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
+        <footer>
+	      <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+            with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
+        </footer>
       </div>
 	</div>
-    </footer>
   </div>
-
-  {% include JB/analytics %}
   </body>
 </html>
