--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -62,16 +62,20 @@
           {{ content }}
         </div>	
 	  </div>
-	  	  
-	  <div class="span3"> 
-	    <div class="sidebar">
-	      <!-- Column right -->
+
+	  <div class="span3">
+	    <!-- Column right -->
+
+        <div class="sidebar">
           <p>
           <a href="{{ HOME_PATH }}"><img src="{{ site.url }}/images/bgava.png" alt="bitsgalore"  width="159" height="200"></a>	  	
 		  </p>
 		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
 		  <h2><a href="https://twitter.com/bitsgalore">Twitter</a></h2>
           <h2><a href="https://digipres.club/@bitsgalore">Mastodon (digipres.club)</a></h2>
+        </div>
+
+	    <div class="sidebar">
 		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
 		  <h2><a href="{{ site.url }}/atom.xml">ATOM feed</a></h2>
           <h2><a href="{{ site.url }}/archive.html">Archive</a></h2>
