--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -228,6 +228,7 @@ code{
 .post-full .date {
   margin-bottom: 20px;
   font-weight: bold;
+  color: #666666;
   padding-bottom:20px;}
 
 /* tag_box */
