added link to issue tracker, external links in sidebar now open in new tab

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -71,8 +71,9 @@
           <a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore"  width="159" height="200"></a>	  	
 		  </p>
 		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
-		  <h2><a href="https://twitter.com/bitsgalore">Twitter</a></h2>
-          <h2><a href="https://digipres.club/@bitsgalore">Mastodon (digipres.club)</a></h2>
+		  <h2><a href="https://twitter.com/bitsgalore" target="_blank">Twitter</a></h2>
+          <h2><a href="https://digipres.club/@bitsgalore" target="_blank">Mastodon (digipres.club)</a></h2>
+          <h2><a href="https://github.com/bitsgalore/bitsgalore.github.io/issues" target="_blank">Report a problem with this site</a></h2>
         </div>
 
 	    <div class="sidebar">
@@ -90,6 +91,7 @@
             {% include JB/tags_list %}
           </ul>
         </div>
+
 	  </div>
 
 
