--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -56,7 +56,7 @@
 	  <div class="span2">
       </div>
 	
-	  <div class="span5">
+	  <div class="span6">
 	    <!-- Column center (main content) -->
         <div class="content">
           {{ content }}
@@ -95,9 +95,9 @@
 	  </div>
 
 
-      <div class="span1">
+      <!--<div class="span1">
         <!-- Empty -->
-        </div>
+        <!-- </div> -->
 
 	</div>
 	
