--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -56,7 +56,7 @@
 	  <div class="span2">
       </div>
 	
-	  <div class="span6">
+	  <div class="span5">
 	    <!-- Column center (main content) -->
         <div class="content">
           {{ content }}
@@ -94,10 +94,9 @@
 
 	  </div>
 
-
-      <!--<div class="span1">
+      <div class="span1">
         <!-- Empty -->
-        <!-- </div> -->
+      </div>
 
 	</div>
 	
