adjusted column arrangement

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -42,7 +42,7 @@
       <div class="span12">
 	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
-        <a href="/"><img src="{{ BASE_PATH }}/images/banner-new.png" alt="bitsgalore" class="img-center" width="970" height="150"></a>
+        <a href="/"><img src="{{ BASE_PATH }}/images/banner-new.png" alt="bitsgalore banner" class="img-center" width="970" height="150"></a>
 		  <div class="banner-tagline">digital preservation - file formats</div>
         </div>
       </div>
@@ -68,7 +68,7 @@
 
         <div class="sidebar">
           <p>
-          <a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore"  width="159" height="200"></a>	  	
+          <a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore avatar"  width="159" height="200"></a>	  	
 		  </p>
 		  <h2><a href="{{ site.url }}/about.html">About</a></h2>
 		  <h2><a href="https://twitter.com/bitsgalore" target="_blank">Twitter</a></h2>
@@ -94,7 +94,7 @@
 
 	  </div>
 
-      <div class="span1">
+      <div class="span2">
         <!-- Empty -->
       </div>
 
