--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -89,11 +89,11 @@ footer {
   font-family: Verdana, Geneva, sans-serif;
   text-align: left;
   /*color:#595959;*/
-  margin-left: 150px;
+  margin-left: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 0px;
-  padding-right: 0px;
+  margin-right: 150px;
   border-bottom: 2px solid black;
   }
   
